# mpl-core-candy-machine

./: README.md  pnpm-lock.yaml
.github/: .env
.github/workflows/: build-programs.yml  create-release.yml  deploy-program.yml  main.yml  test-js.yml  test-programs.yml
clients/js/: README.md  package.json  pnpm-lock.yaml
clients/js/src/: constants.ts  create.ts  createCandyGuard.ts  createCandyMachine.ts  createCandyMachineV2.ts  createLutForCandyMachine.ts  errors.ts  index.ts  mintV1.ts  mintV2.ts  plugin.ts  route.ts  updateAssetV1.ts  updateCandyGuard.ts
clients/js/test/: _setup.ts  create.test.ts  createCandyMachineV2.test.ts  createLutForCandyMachine.test.ts  edition.test.ts  initializeCandyMachineV2.test.ts  mintAssetFromCandyMachine.test.ts  route.test.ts  (+7 more)
configs/: kinobi.cjs  shank.cjs  validator.cjs
configs/program-scripts/: build.sh  dump.sh
idls/: candy_guard.json  candy_machine_core.json
programs/candy-guard/: Anchor.toml
programs/candy-guard/program/: Cargo.toml
programs/candy-guard/program/src/: errors.rs  lib.rs
programs/candy-guard/program/src/guards/: allocation.rs  allow_list.rs  asset_burn.rs  asset_burn_multi.rs  asset_gate.rs  asset_mint_limit.rs  asset_payment.rs  asset_payment_multi.rs  bot_tax.rs  edition.rs  freeze_sol_payment.rs  freeze_token_payment.rs  mod.rs  nft_burn.rs  nft_mint_limit.rs  nft_payment.rs  program_gate.rs  redeemed_amount.rs  sol_fixed_fee.rs  token_burn.rs  token_payment.rs  vanity_mint.rs
programs/candy-guard/program/src/instructions/: mint.rs  mint_v1.rs  mint_v2.rs  mod.rs  route.rs  transfer_test.rs  unwrap.rs  update_asset_v1.rs  wrap.rs
programs/candy-guard/program/src/state/: candy_guard.rs
programs/candy-machine-core/: Anchor.toml
programs/candy-machine-core/program/: Cargo.toml
programs/candy-machine-core/program/src/: constants.rs  errors.rs  lib.rs  utils.rs
programs/candy-machine-core/program/src/instructions/: initialize.rs  initialize_v2.rs  mint_asset.rs  mod.rs  set_collection.rs  set_collection_v2.rs  set_token_standard.rs  update.rs  update_asset.rs
programs/candy-machine-core/program/src/state/: candy_machine.rs  candy_machine_data.rs
(+59 files in other folders)
