[package]
authors = ["Metaplex Developers <dev@metaplex.com>"]
description = "Metaplex Candy Guard: programmatic access control for Candy Machine."
edition = "2021"
license-file = "../../../LICENSE"
name = "mpl-core-candy-guard"
readme = "../README.md"
repository = "https://github.com/metaplex-foundation/mpl-candy-machine-asset"
version = "0.2.1"

[lib]
crate-type = ["cdylib", "lib"]

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
test-bpf = []

[dependencies]
anchor-lang = "0.30.1"
arrayref = "0.3.6"
mpl-core = { version = "0.8.0" }
mpl-core-candy-guard-derive = { path = "../macro", version = "0.2.1" }
mpl-core-candy-machine-core = { path = "../../candy-machine-core/program", version = "0.2.0", features = [
  "cpi",
] }
mpl-token-metadata = "3.2.1"
regex-lite = "0.1.6"
solana-gateway = { version = "0.6.0", features = ["no-entrypoint"] }
solana-program = "1.18.26"
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = [
  "no-entrypoint",
] }
spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "3.0.4", features = ["no-entrypoint"] }
