[package]
authors = ["Metaplex Developers <dev@metaplex.com>"]
description = "NFT Candy Machine Core: programmatic and trustless NFT drops."
edition = "2021"
license-file = "../../../LICENSE"
name = "mpl-core-candy-machine-core"
readme = "../README.md"
repository = "https://github.com/metaplex-foundation/mpl-candy-machine-asset"
version = "0.2.1"

[lib]
crate-type = ["cdylib", "lib"]

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []

[dependencies]
anchor-lang = "0.28.0"
arrayref = "0.3.6"
mpl-core = { version = "0.8.0" }
mpl-token-metadata = "3.2.1"
mpl-utils = { version = "0.3", default-features = false }
solana-program = "~1.16.5"
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = [
  "no-entrypoint",
] }
spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
